tests/errors/object_field_cycle.dang
pub bad = {{
  a: b
  b: a
}}

bad
